# EInkReader

./: README.md  build.gradle  fix_toc.patch  gradle.properties  new_function.rs  prefix.rs  settings.gradle  suffix.rs  test_book_sources.py
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/einkreader/: EInkReaderApp.java
app/src/main/java/com/einkreader/core/: FeatureFlags.java  NativeBridge.java
app/src/main/java/com/einkreader/core/model/: Chapter.java
app/src/main/java/com/einkreader/core/parser/: EpubParser.java  TxtParser.java
app/src/main/java/com/einkreader/core/refresh/: EinkRefreshManager.java
app/src/main/java/com/einkreader/ui/reader/: DebugLog.java  (+5 more)
app/src/main/java/com/einkreader/utils/: EncodingDetector.java
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_library.xml  activity_reader.xml  activity_settings.xml  item_book.xml
app/src/main/res/values/: colors.xml  themes.xml
github/: .gitignore  README.md  build.gradle  gradle.properties
github/app/: build.gradle
github/app/src/main/res/layout/: activity_library.xml  activity_reader.xml  item_book.xml
github/app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: README.md  build-rust.ps1  build-rust.sh
rust/.cargo/: config.toml
rust/einkreader-core/: Cargo.toml
rust/einkreader-core/src/: jni_bridge.rs  lib.rs  types.rs
rust/einkreader-core/src/encoding/: mod.rs
rust/einkreader-core/src/parser/: epub.rs  mod.rs  txt.rs
(+8 files in other folders)
